--- a/index.html
+++ b/index.html
@@ -2728,7 +2728,7 @@
 			// session.totalRoomBitrate = 500; // int, kbps -- you can set the default quality of the group room here
 			// session.height // int  ; height to publish a video stream at.  Will fail if not supported by the camera
 			// session.width // int ; see above
-			// session.quality // int  -- if setting == 0, then than the default resolution will be 1080p, instead of 720p60 (q=1) , while  q=2 = 360p30.
+			// session.quality // 2  -- if setting == 0, then than the default resolution will be 1080p, instead of 720p60 (q=1) , while  q=2 = 360p30.
 			// session.sink // Output device to playback audio to. see the docs
 			// session.offsetChannel // int
 			// session.audioChannels // int
@@ -2736,10 +2736,10 @@
 			// session.frameRate // int ; publishing frame rate. will fail if camera does not support it.
 			// session.sync // see the docs
 			// session.buffer // int in milliseconds ; see the docs
-			// session.roomid // "yyyy"  -- the room name to use.  alphanumeric.
-			// session.password = null; // null will ask the user for a password
+			// session.roomid // "SethTest1234"  -- the room name to use.  alphanumeric.
+			// session.password = Modsquad1611; // null will ask the user for a password
 			// session.scene // the scene name. Scene 0, 1, ... 8, or any custom scene name is supported.  STRING value. Needed to have a clean view link of a guest stream
-			// session.title // "zzzz"   ; sets the title of the browser page.
+			// session.title // "MSQ EL"   ; sets the title of the browser page.
 			// session.introOnClean = true; // this will load the page with the webcam selection screen if &push or &room is in the URL; no need to use &webcam.
 			// session.lowBitrateCutoff = 300; // Set a minimum bitrate (in kbps) before the stream is hidden. Useful for IRL streams maybe
 			// session.apiserver = "wss://api.vdo.ninja:443"; // specifiy a custom websocket API URL.
